--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \\\"Error: no test specified\\\" && exit 1",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build",
     "start:dev": "nodemon server.js",
     "start:prod": "node server.js"
   },
