--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-BASEURL=https://guarded-temple-22781-100bc7fec95c.herokuapp.com
+REACT_APP_BASEURL=https://guarded-temple-22781-100bc7fec95c.herokuapp.com
