--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-REACT_APP_BASEURL=https://guarded-temple-22781-100bc7fec95c.herokuapp.com
+REACT_APP_BASEURL=https://laptopbazaar-5de6a4f58683.herokuapp.com/
