File storage fixed

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
 REACT_APP_BASEURL=https://laptopbazaar-5de6a4f58683.herokuapp.com/
+REACT_APP_FILESTORAGEURL=https://res.cloudinary.com/dybfbkp7d/image/upload/v1747122761/laptops
